# Lab_cem2

./: CMakeLists.txt
console/: console_app.cpp
include/Class/: Class.h
src/: Class.cpp  Class_list.cpp  console_app.cpp
test/: Class_list_tests.cpp  Class_tests.cpp
